fix Record解析时，别名导致的问题